<resources>
    <string name="app_name">Wi-Fi Analyzer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">WIFI-Analyzer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_filter">Filter</string>

    <string name="menu_access_points">Access points</string>
    <string name="menu_channels_rate">Channels rate</string>
    <string name="menu_channel_graph">Channels graph</string>
    <string name="menu_time_graph">Time graph</string>

    <string name="menu_export">Export</string>
    <string name="menu_available_channels">Available channels</string>
    <string name="menu_vendors">Vendors</string>
    <string name="menu_port_authority">Port authority</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_about">About App</string>

    <string name="scan_interval_title">Scan Interval</string>
    <string name="sort_by_default">0</string>
    <string name="sort_access_points_by">Sort Access Points By</string>
    <string name="sort_by_signal_strength">Signal Strength</string>
    <string name="sort_by_ssid">SSID</string>
    <string name="sort_by_channel">Channel</string>
    <string name="group_by_none">"None"</string>
    <string name="group_by_ssid" translatable="false">"SSID"</string>
    <string name="group_by_channel">"Channel"</string>
    <string name="group_by_virtual">"Virtual"</string>
    <string name="group_by_title">Group Access Points By</string>
    <string name="connection_view_complete">"Complete"</string>
    <string name="connection_view_compact">"Compact"</string>
    <string name="connection_view_hide">"Hide"</string>
    <string name="connection_display_title">Connection Display</string>
    <string name="access_point_view_complete">Complete</string>
    <string name="access_point_view_compact">Compact</string>
    <string name="access_point_display_title">Access Point Display</string>
    <string name="graph_maximum_title">Graph Maximum Signal Strength</string>
    <string name="graph_legend_title">Channel Legend Display</string>
    <string name="time_graph_legend_title">Time Graph Legend Display</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
    <string name="theme_system">System</string>
    <string name="theme_title">Theme</string>
    <string name="keep_screen_on_title">Keep screen on</string>
    <string name="country_title">Country</string>
    <string name="language_title">Language</string>
    <string name="channel_short">CH</string>
    <string name="level_value">%1$s dBm</string>
    <string name="best_channels">Best Channels:</string>
    <string name="channel_rating_heading_rating">Channel Rating</string>
    <string name="channel_rating_heading_number">Channel number</string>
    <string name="channel_rating_heading_count">Access Point Count</string>
    <string name="wifi_band_title">2.4/5/6 GHz</string>
    <string name="wifi_band_2ghz">2.4 GHz</string>
    <string name="wifi_band_5ghz">5 GHz</string>
    <string name="wifi_band_6ghz">6 GHz</string>
    <string name="wifi_band_2ghz_available">2.4 GHz: </string>
    <string name="wifi_band_5ghz_available">5 GHz: </string>
    <string name="wifi_band_6ghz_available">6 GHz: </string>
    <string name="scanner_pause">pause</string>
    <string name="wifi_channels_list_url">https://en.wikipedia.org/wiki/List_of_WLAN_channels</string>
    <string name="signal_strength">Signal Strength(dBm)</string>
    <string name="scan_count">Scan Count</string>
    <string name="filter_ssid_title">SSID</string>
    <string name="filter_ssid_hint">enter SSID</string>
    <string name="filter_wifi_band_title">WI-Fi Band</string>
    <string name="filter_security_title">Security</string>
    <string name="filter_strength_title">Signal Strength</string>
    <string name="security_none">None</string>
    <string name="security_wps">WPS</string>
    <string name="security_wep">WEP</string>
    <string name="security_wpa">WPA</string>
    <string name="security_wpa2">WPA2</string>
    <string name="security_wpa3">WPA3</string>
    <string name="country_code_key">country_code</string>
    <string name="country_code_summary">%s</string>
    <string name="country_code_title">Country</string>
    <string name="language_key">language</string>
    <string name="language_summary">%s</string>
    <string name="sort_by_key">sort_by</string>
    <string name="scan_interval_key">scan_interval</string>
    <string name="connection_display_key">connection_display</string>
    <string name="access_point_display_key">access_point_display</string>
    <string name="graph_maximum_key">graph_maximum</string>
    <string name="time_graph_legend_key">time_graph_legend</string>
    <string name="theme_key">theme</string>
    <string name="keep_screen_on_key">keep_screen_on</string>
    <string name="filterWifiBand2">filterWifiBand2</string>
    <string name="filterWifiBand5">filterWifiBand5</string>
    <string name="filterWifiBand6">filterWifiBand6</string>
    <string name="filterStrength0">filterStrength0</string>
    <string name="filterStrength1">filterStrength1</string>
    <string name="filterStrength2">filterStrength2</string>
    <string name="filterStrength3">filterStrength3</string>
    <string name="filterStrength4">filterStrength4</string>
    <string name="filterSecurityNone">filterSecurityNone</string>
    <string name="filterSecurityWPS">filterSecurityWPS</string>
    <string name="filterSecurityWEP">filterSecurityWEP</string>
    <string name="filterSecurityWPA">filterSecurityWPA</string>
    <string name="filterSecurityWPA2">filterSecurityWPA2</string>
    <string name="filterSecurityWPA3">filterSecurityWPA3</string>
    <string name="wifi_speed">%1$s Mbps</string>
    <string name="wifi_distance">~ %1$s m</string>
    <string name="wifi_frequency">%1$s GHz</string>
    <string name="wifi_channel_width">%1$s MHz</string>
    <string name="filter_apply">APPLY</string>
    <string name="filter_reset">RESET</string>
    <string name="filer_close">CLOSE</string>
    <string name="filter_title">FILTER</string>
    <string name="about_text">This app was made by Nastya Smilka :)</string>
    <string name="export_title">Access points for %1$s</string>
    <string name="export_type">text/plain</string>
    <string name="language_english">English</string>
    <string name="language_ukrainian">Ukrainian</string>
    <string name="country_default_value">US</string>
</resources>