<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory>

        <ListPreference
            app:defaultValue="5"
            app:entries="@array/scan_interval_array"
            app:entryValues="@array/scan_interval_array"
            app:icon="@drawable/ic_fast_forward"
            app:key="@string/scan_interval_key"
            app:title="@string/scan_interval_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory>

        <ListPreference
            app:defaultValue="@string/sort_by_signal_strength"
            app:entries="@array/sort_by_array"
            app:entryValues="@array/sort_by_array"
            app:icon="@drawable/ic_sort"
            app:key="@string/sort_by_key"
            app:title="@string/sort_access_points_by"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory>

        <ListPreference
            app:defaultValue="@string/connection_view_compact"
            app:entries="@array/connection_display_array"
            app:entryValues="@array/connection_display_array"
            app:icon="@drawable/ic_view_carousel"
            app:key="@string/connection_display_key"
            app:title="@string/connection_display_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="@string/access_point_view_complete"
            app:entries="@array/access_point_display_array"
            app:entryValues="@array/access_point_display_array"
            app:icon="@drawable/ic_view_carousel"
            app:key="@string/access_point_display_key"
            app:title="@string/access_point_display_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory>

        <ListPreference
            app:defaultValue="0dBm"
            app:entries="@array/graph_maximum_array"
            app:entryValues="@array/graph_maximum_array"
            app:icon="@drawable/ic_expand_less"
            app:key="@string/graph_maximum_key"
            app:title="@string/graph_maximum_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="Top"
            app:entries="@array/time_graph_legend_array"
            app:entryValues="@array/time_graph_legend_array"
            app:icon="@drawable/ic_show_chart"
            app:key="@string/time_graph_legend_key"
            app:title="@string/time_graph_legend_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory>

        <ListPreference
            app:defaultValue="System"
            app:entries="@array/theme_array"
            app:entryValues="@array/theme_array"
            app:icon="@drawable/ic_color_lens"
            app:key="@string/theme_key"
            app:title="@string/theme_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_brightness_low"
            app:key="@string/keep_screen_on_key"
            app:title="@string/keep_screen_on_title" />

    </PreferenceCategory>

    <PreferenceCategory>
        <ListPreference
            app:icon="@drawable/ic_location_on"
            app:key="@string/country_code_key"
            app:persistent="true"
            app:summary="@string/country_code_summary"
            app:title="@string/country_code_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:icon="@drawable/ic_language"
            app:key="@string/language_key"
            app:persistent="true"
            app:summary="@string/language_summary"
            app:title="@string/language_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <ListPreference />

</PreferenceScreen>