<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="horizontal"
    tools:showIn="@layout/fragment_channel_rate">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="4dp"
        android:layout_weight="1"
        android:text="@string/channel_rating_heading_rating"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_weight="1.75"
        android:gravity="center"
        android:text="@string/channel_rating_heading_number"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.75"
        android:gravity="center"
        android:text="@string/channel_rating_heading_count"
        android:textStyle="bold" />
</LinearLayout>